# pbr2gltf2

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
include/: pbr2gltf2.hpp
src/: main.cpp  pbr2gltf2.cpp
